--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -65,13 +65,10 @@
             </form>
             <div>
                 <a class="btn btn-link" href="/oauth2/authorization/kakao">
-                    카카오로 로그인하기
+                    카카오로 로그인하기(아직 안됨)
                 </a>
-                <a class="btn btn-link" href="/oauth2/authorization/google">
-                    구글 로그인하기(아직 안됨)
-                </a>
-                <a class="btn btn-link" href="/oauth2/authorization/naver">
-                    네이버 로그인하기(아직 안됨)
+                <a class="btn btn-link" href="/oauth2/authorization/github">
+                    깃허브 로그인하기(아직 안됨)
                 </a>
             </div>
         </div>
