--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -65,7 +65,7 @@
             </form>
             <div>
                 <a class="btn btn-link" href="/oauth2/authorization/kakao">
-                    카카오로 로그인하기(아직 안됨)
+                    카카오로 로그인하기
                 </a>
                 <a class="btn btn-link" href="/oauth2/authorization/github">
                     깃허브 로그인하기(아직 안됨)
