--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -70,6 +70,9 @@
                 <a class="btn btn-link" href="/oauth2/authorization/github">
                     깃허브 로그인하기(아직 안됨)
                 </a>
+                <a class="btn btn-link" href="/oauth2/authorization/google">
+                    구글 로그인하기
+                </a>
             </div>
         </div>
     </div>
